# haqor-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  publish.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-use-nix-develop-shell-for-consistent-dev-environment.md  0003-use-a-custom-bible-format.md  0004-object-suffix-handling.md  0005-repoint-the-divine-name.md
examples/: compo.rs  harvest_nouns.rs  harvest_verbs.rs  tutor.rs  vocab.rs
scripts/: bump-version.sh
src/: bible.rs  lib.rs  library.rs  main.rs  repo.rs  transliterate.rs  tutor.rs
src/generate/: haqor_db.rs  harness.rs  hebrew_db.rs  lexicon_db.rs  mod.rs  occurrences.rs  prefilter.rs  proper_names.rs  sedra.rs  sedra_db.rs  translit.rs  uxlc.rs
src/morphology/: gold_noun.rs  hebrew.rs  irregular_noun.rs  irregular_verb.rs  mod.rs  noun.rs  noun_parse.rs  parse.rs  root.rs  verb.rs
supply-chain/: audits.toml  config.toml
test_library/: tbm.bible.sqlite
