[package]
name = "haqor-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Library providing convenient access to bible resources"
repository = "https://github.com/machshev/haqor-core"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.29"
log = "0.4.22"
sqlite = "0.36.0"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
anyhow = "1.0.81"
