[package]
name = "haqor-core"
version = "0.2.2"
rust-version = "1.86"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Library providing convenient access to bible resources"
repository = "https://github.com/machshev/haqor-core"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
anyhow = "1.0.99"
bytes = "1.10.1"
rusqlite = { version = "0.37.0", features = ["bundled", "serialize"] }
rust-embed = "8.7.2"
